# experiments

CsvSourceGenerator/: CsvParser.sln  Directory.Build.props
CsvSourceGenerator/CsvParser/: CsvParser.csproj  Program.cs
CsvSourceGenerator/CsvParser.Library/: CsvParser.Library.csproj  CsvSerializableAttribute.cs
HotChocolateFusionTest/: Gateway.sln
HotChocolateFusionTest/.config/: dotnet-tools.json
HotChocolateFusionTest/GatewayServer/: GatewayServer.csproj  Program.cs  gateway.fgp
HotChocolateFusionTest/PaintingGraph/: PaintingGraph.csproj  PaintingGraph.fsp  Program.cs  schema.extensions.graphql  schema.graphql  subgraph-config.json
HotChocolateFusionTest/UserGraph/: Program.cs  UserGraph.csproj  UserGraph.fsp  schema.graphql  subgraph-config.json
NpgsqlEventsDemo/: EventsDemo.sln  README.md
NpgsqlEventsDemo/EventsDemo/: EventsDemo.csproj  IJobStorage.cs  Job.cs  JobRunner.cs  (+4 more)
cpp-di-container/: .clang-tidy  CMakeLists.txt  README.md
cpp-di-container/src/: CakeProtocol.hpp  CakeService.hpp  Logger.hpp  Server.hpp  ServiceContainer.hpp  main.cpp
cpp-grpc-callback-api/: CMakeLists.txt  GreeterService.cpp  GreeterService.h  Reactor.cpp  Reactor.h  ReactorPublisher.cpp  ReactorPublisher.h  main.cpp
cpp-grpc-callback-api/proto/: CMakeLists.txt  helloworld.proto
cpp-queue/: .clang-format  .clang-tidy  Makefile  compile_commands.json  queue.cpp
cpp-udp-server/: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
cpp-udp-server/sender/: sender.py
keyset-index/: .gitignore  client.cs  postgres.yaml  start.sh
signalr-wasm-client/: README.md
(+24 files in other folders)
